--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "express": "^5.2.1",
     "firebase": "^12.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
